--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "validator": "^13.7.0"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
