--- a/package.json
+++ b/package.json
@@ -18,11 +18,19 @@
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-ejs-layouts": "^2.5.1",
+    "express-pdf": "^1.2.2",
+    "firebase": "^9.6.4",
+    "firebase-admin": "^10.0.2",
+    "flutterwave-node-v3": "^1.0.9",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
+    "pdf-creator-node": "^2.2.4",
+    "unirest": "^0.6.0",
     "validator": "^13.7.0"
   },
   "engines": {
